--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -207,7 +207,7 @@ this is that place.
 Our lab's practices and policies are intended to provide a framework
 for \textit{maximizing efficiency}.  Achieving our peak efficiency as
 a lab means we are being as scientifically productive as possible, in
-terms of knowledge discovery (learning new stuff) and disemination
+terms of knowledge discovery (learning new stuff) and dissemination
 (papers, talks, conference presentations, publicly released datasets,
 software, etc.). It also means that our fellow lab members are
 achieving their training and career objectives.  To achieve peak
@@ -236,24 +236,55 @@ training and career potential.  To do this, the Contextual Dynamics
 Lab practices \textbf{agile science}, as described in the next section.
 
 \newpage
-\section{The Agile Science Approach}
-The Agile Science approach used in the Contextual Dynamics Lab is
+\section{Doing agile research}
+\marginnote{\texttt{TASK:} Watch the
+  \href{http://scrumtrainingseries.com/}{Scrum Training Series videos}
+  and answer the quiz questions. (Note: ``Scrum'' is an implementation
+  of the agile process.) In the lab we'll adapt this approach
+  somewhat, but we will try to preserve the core ideas.  For example,
+  you can mentally replace ``software'' with ``software, papers, and
+  posters.''  Also, the meeting and team structures we use in the lab
+  will be different from those used in a software development
+  environment.  Again, we'll try to preserve the core principles.} The
+agile approach to research we use in the Contextual Dynamics Lab is
 inspired by the Agile Movement in the software development world.  The
-fundamental idea is to respond to unpredictability in research through
-incremental, iterative work ``sprints.''  This is different from
-traditional approaches, where a project team might try to plan out
-every part of a project in advance.  We do try to break projects into
-tiny bite-sized chunks, but the key is that we only need to know what
-the \textit{next} chunk is.  Although it's helpful to have a general
-sense of where things are going, we never actually need to know where
-the project will ultimately end up.  The goals and process are
-constantly evolving.
+idea is to create learning, adaptable teams to work on very small
+bite-sized tasks.  Specifically, project teams are designed to respond
+to unpredictability in research through incremental, iterative work
+``sprints.''  Each sprint lasts approximately 1--2 weeks, and results
+in a demonstrable research product (e.g.\ a draft of a paper, a draft
+of a grant, a completed analysis or figure, a poster, a software tool,
+etc.).
 
-There are \href{http://www.agilemanifesto.org/principles.html}{twelve
-  principles} behind our approach:\marginnote{\texttt{TASK:} Watch the
-  \href{http://scrumtrainingseries.com/}{Scrum Training Series videos}.  While watching, mentally replace
-  ``software'' with ``software, papers, and posters.''  (Note:
-  ``Scrum'' is an implementation of the agile process.)}
+This is different from traditional approaches that you may have
+encountered in other labs or work environments, where a research team
+might try to plan out every part of a project in advance in a series
+of small steps.  We still try to break projects into tiny bite-sized
+chunks, but the key insight of the agile approach is that we only need
+to know what the \textit{next} chunk is.  Although it's helpful to
+have a general (if vague) sense of where things are going, we never
+actually need to know where the project will ultimately end up.  The
+goals and process are constantly evolving.  Perhaps the best
+justification for this approach is that \textbf{the first day of a new
+  research project is when you're the most clueless about what you'll
+  find}.  So how could that possibly be the ideal time to plan out the
+entire project?\marginnote{\texttt{NOTE:} Our adapted approach also
+  draws inspiration from
+  \href{http://technocalifornia.blogspot.com/2008/06/agile-research.html}{this
+    blog}.}
+
+Our \href{http://agilemanifesto.org/}{agile science manifesto} has three key
+tenets:
+\begin{enumerate}
+\item Value \textbf{individuals and interactions} over
+  \textit{processes and tools}.
+\item Value \textbf{working tools and research products} over
+  \textit{comprehensive documentation}.
+\item Value \textbf{responding to change} over \textit{following a plan}.
+\end{enumerate}
+While there is value to the \textit{italicized} items, we value
+\textbf{bolded} items more.  There are \href{http://www.agilemanifesto.org/principles.html}{twelve
+  principles} we use to achieve these tenets:
 \begin{enumerate}
 \item Our highest priority is to benefit the research community
   through the early and continuous delivery of documentation (papers,
@@ -296,9 +327,12 @@ There are \href{http://www.agilemanifesto.org/principles.html}{twelve
 \end{enumerate}
 
 
-\section{Projects roles}
-Every project has just three roles.  You will play one or more of
-these roles on each project:
+
+
+
+\subsection{Projects roles}
+Every project has four possible roles.  You will play one or more of
+these roles on your project:
 \begin{enumerate}
 \item \textbf{Project Owner.}  This is the person responsible for
   maximizing ``return on investment'' of the project effort:
@@ -336,16 +370,16 @@ these roles on each project:
 \item Has a leadership role
 \end{enumerate}
 
-\item \textbf{Project Coordinator}
-\begin{enumerate}
-\item Facilitates the agile science process
-\item Helps resolve impediments
-\item Creates an environment conducive to team self-organization
-\item Captures empirical data to adjust forecasts
-\item Shields the team from external interference and distraction to
+\item \textbf{Project Coordinator.} The Project Coordinator facilitates
+  the agile science process by:
+\begin{enumerate} 
+\item Helping to resolve impediments
+\item Creating an environment conducive to team self-organization
+\item Capturing empirical data to adjust forecasts
+\item Shielding the team from external interference and distraction to
   keep it ``in the zone''
-\item Enforces timelines
-\item Has no management authority over the team (anyone with authority
+\item Enforcing timelines
+\item Having no management authority over the team (anyone with authority
   over the team is by definition not its Project
   Coordinator)\marginnote{NOTE: we do not currently have a dedicated
     Lab Coordinator, so Jeremy is playing that role.  Therefore the
@@ -353,14 +387,93 @@ these roles on each project:
     approach.  The intended role description is outlined here, but in
     practice the Project Coordinator role may have management
     authority until we have a dedicated Lab Coordinator.}
-\item Has a leadership role
+\item Having a leadership role
 \item Usually the Lab Coordinator will also be the Project Coordinator
 \end{enumerate}
+
+\item \textbf{Collaborator.}  Collaborators are not formally part of
+  the project team, and generally will not attend regular meetings as
+  part of the team.  Collaborators do not have a leadership role in
+  the project.  They may carry out one or more of the
+  following roles:
+\begin{enumerate}
+\item Provide data or share equipment
+\item Provide occasional consulting services
+\item Provide occasional feedback on project results
+\item Carry out minor analyses
+\item Proofread documents
+\item Help with administrative tasks such as scheduling
+\item Help with information technology tasks such as computer
+  maintenance
+\item A project may never be held up by a collaborator.  If the
+  collaborator fails to provide a promised service, the project team
+  must adapt.  If the collaborator fails to meet a non-critical
+  deadline, the project will proceed without that component of the
+  project.  Involvement as a collaborator is fluid.
+\end{enumerate}
+By definition, collaborators play a minor role in the project, and they are not
+responsible for managing any aspect of the project.  They may become Team
+Members if their involvement increases.  Generally collaborators will
+be included in a paper's acknowledgement section, but collaborators
+are not normally co-authors.
+\end{enumerate}
+
+
+\subsection{Project meetings}
+Effective lab communication requires forums for communicating.  As
+described below, we use \href{http://www.slack.com}{Slack} to facilitate non-in-person
+communications, but Slack cannot replace in-person meetings.  In fact,
+our approach is set up to encourage in-person interactions as often as
+possible-- ideally at least once per day.  We'll have the following
+regularly scheduled meetings:
+\begin{enumerate}
+\item \textbf{Lab meeting.}  We will have, as a lab, a regular weekly
+  2 hour meeting where we discuss current progress, impediments to
+  progress, and plans for the upcoming week.  We will also use the
+  meeting time to prioritize the research backlog and plan sprints for
+  that week.  (In \href{http://scrumtrainingseries.com/}{Scrum}
+  terminology, lab meeting will combine the notions of the
+  \href{http://scrumtrainingseries.com/BacklogRefinementMeeting/BacklogRefinementMeeting.htm}{Backlog
+    Refinement Meeting} and the
+  \href{http://scrumtrainingseries.com/SprintPlanningMeeting/SprintPlanningMeeting.htm}{Sprint
+    Planning Meeting}.)  Attendees: everyone in the lab.
+\item \textbf{Daily team meeting.}  You and your fellow project
+  members will meet at least once daily, for 15 minutes.  You'll
+  schedule this meeting as a group based on what's most convenient.
+  The idea is to discuss:
+\begin{enumerate}
+\item What each team member did since yesterday
+\item What each team member plans to do today
+\item Any impediments to progress
+\end{enumerate}
+Because of the content of this meeting, it's ideal to schedule the
+meetings for early in the day.  This meeting is based on the notion of
+a
+\href{http://scrumtrainingseries.com/DailyScrumMeeting/DailyScrumMeeting.htm}{Daily
+  Scrum Meeting}. Attendees: all team members (except the Project Owner
+and Project Coordinator).
+\item \textbf{Weekly team meeting.}  Each team will meet for 1 hour
+  each week to do live demonstrations of working products for the
+  Project Owner and any external collaborators.  This could be in the
+  form of a software demonstration, a couple of slides demonstrating a
+  figure, a poster (e.g. for a conference), or a draft of a document
+  or section of a document.  The meeting is based on the notion of a
+  \href{http://scrumtrainingseries.com/SprintReviewMeeting/SprintReviewMeeting.htm}{Sprint
+    Review Meeting}.  Attendees: all team members (Project Coordinator
+  attendance is optional).
+\item \textbf{Tutorial meetings.}  Once every other week, we will meet
+  for 1 hour to discuss a method or technique of general interest and
+  relevance to the lab.  Usually this will entail a student-lead
+  discussion of a journal article, software package, or technique.
+  The presentations may be slide-based (e.g.\ PowerPoint, Keynote,
+  Beamer) or whiteboard-based.  Presentations should be informal and
+  heavily discussion oriented.  Attendees: optional, but all lab
+  members and collaborators are encouraged to attend.
 \end{enumerate}
 
 %\newpage
 \section{Getting started in the lab}
-The very first thing you need to do is to create three accounts that
+\marginnote{\texttt{TASK:} Create Slack, Trello, and BitBucket accounts.}The very first thing you need to do is to create three accounts that
 will enable you to interact with the rest of the lab, download and use
 the lab's software packages, and accomplish various necessary
 administrative tasks:
@@ -369,11 +482,11 @@ administrative tasks:
   almost all not-in-person lab communications take place.  It provides
   an interface for asking questions, storing notes, and sharing
   ideas.  If you have an @dartmouth.edu email address, you can create
-  an account.  Otherwise you'll need to get invited by the Lab Coordinator.
+  an account without an invitation.  Otherwise you'll need to get invited by the Lab Coordinator.
 
 \item \href{https://www.trello.com}{\textbf{Trello.}}  This is used to
   manage all projects and tasks.  It provides a way of tracking
-  progress and imediments to progress.  You'll need to sign up for a
+  progress and impediments to progress.  You'll need to sign up for a
   free account and then have the Lab Coordinator invite you to the
   lab's Trello Team.
 
@@ -394,9 +507,11 @@ channel} or the channel specific your project).
 
 \section{Starting a new project}
 Our lab uses a number of project management tools and policies to
-promote continuity across projects and lab members.  To start a new
-project, follow the steps
-\href{https://trello.com/b/s4L8fbot/initiate-a-project}{here}.
+promote continuity across projects and lab members.  First, make sure
+that your project doesn't already exist.  If you're sure your project
+doesn't already exist, follow the steps
+\href{https://trello.com/b/s4L8fbot/initiate-a-project}{here} to
+initiate a new project.
 
 %\newpage
 \section{Joining a project}
@@ -408,13 +523,6 @@ communications should occur through Slack, whenever possible.  This
 keeps notes searchable and visible to all team members (except direct
 messages, which are useful for private communications between one or
 more team members).
-
-
-\section{Meetings}
-Effective lab communication requires forums for communicating.  As
-described above, we use Slack to facilitate non-in-person
-communications, but Slack cannot replace in-person meetings.
-%http://scrumtrainingseries.com/BacklogRefinementMeeting/BacklogRefinementMeeting.htm
 
 
 \section{Scheduling}
@@ -429,11 +537,14 @@ our collaborators, and our experimental participants.  There are three
 basic tools the lab uses to organize and schedule events:
 \begin{itemize}
 \item \href{http://calendar.google.com}{Google Calendar}.  We use the
-  main lab calendar to keep track of lab-wide events including lab
-  meetings, conferences, important talks.  We use the DHMC events
-  calendar to keep track of important events and meetings at the
-  DHMC.  We use the out-of-lab calendar to keep track of known
-  absenses (e.g. illness, travel, holidays, etc.).  We use the
+  \href{https://calendar.google.com/calendar/ical/5ta50cfv4uih0a0k8m2di9dhjo\%40group.calendar.google.com/private-ff1338ddce84ac37d5ab682cd94e7f69/basic.ics}{main lab calendar} to keep track of lab-wide events including lab
+  meetings, conferences, important talks.  We use the \href{https://calendar.google.com/calendar/ical/j6noo2tqahpsoq9na1h16paf3s\%40group.calendar.google.com/private-c3d75bea1ab4605947353d159d3dcd05/basic.ics}{DHMC events
+  calendar} to keep track of important events and meetings at the
+  DHMC.  We use the \href{https://calendar.google.com/calendar/ical/h1j06dohcg7v1g2o5tkb7ijhvs\%40group.calendar.google.com/private-239aaf8b4dc60480c90e8d7fc353e229/basic.ics}{out-of-lab calendar} to keep track of known
+  absences (e.g. illness, travel, holidays,
+  etc.).\marginnote{\texttt{TASK:} ask the Lab Coordinator to send you
+    an invite to the out-of-lab calendar so that you can add your
+    planned absences.} We use the
   meetings calendar to keep track of scheduled meetings (regularly
   scheduled meetings with Jeremy or senior lab members, project
   meetings, etc.).  When you add an event, it is important to include
@@ -449,7 +560,7 @@ basic tools the lab uses to organize and schedule events:
   When2Meet to converge on mutually good meeting times that fit (as
   well as possible) with everyone's busy schedules.  Doodle is most
   useful for selecting a date from a large number of options, and
-  When2Meet is most useful for selecting a specfic time on a
+  When2Meet is most useful for selecting a specific time on a
   relatively small number of dates.
 \end{itemize}
 
@@ -457,7 +568,7 @@ basic tools the lab uses to organize and schedule events:
  We abide by a ``common sense'' attendance policy that relies on an
  honor system.  If you cannot attend a lab event or meeting, your
  privacy will be respected: you do not (generally speaking) need to
- provide a reason for your absense (although you are honor bound not
+ provide a reason for your absence (although you are honor bound not
  to abuse this system!)-- but you are expected to responsibly manage
  your schedule so that you get your work done and minimize
  inconvenience to others to the extent possible.  The one exception is
@@ -468,10 +579,10 @@ basic tools the lab uses to organize and schedule events:
  bring your concerns to Jeremy or the Lab Coordinator).  Here's the
  official lab attendance policy:
 \begin{itemize}
-\item It is your responsibility to notify anyone your absense will
+\item It is your responsibility to notify anyone your absence will
   affect (e.g. people you're scheduled to meet with, etc.).  The best
-  way to do this is via email or Slack.  We also use an ``out-of-lab''
-  calendar to keep track of things like vacations or longer planned absences.
+  way to do this is via email or Slack.  We also use an \href{https://calendar.google.com/calendar/ical/h1j06dohcg7v1g2o5tkb7ijhvs\%40group.calendar.google.com/private-239aaf8b4dc60480c90e8d7fc353e229/basic.ics}{``out-of-lab''
+  calendar} to keep track of things like vacations or longer planned absences.
 
 \item If you are feeling sick, \textit{do not come into the lab}.  We can
   arrange virtual meetings (if you are feeling well enough) or
@@ -496,12 +607,12 @@ basic tools the lab uses to organize and schedule events:
   Dartmouth-affiliated events.  If you are overwhelmed with other
   work, have a conflicting meeting, are running an experimental
   participant, or are out of the lab for other reasons, you do not
-  need to provide a reason for your absense (unless you're presenting
+  need to provide a reason for your absence (unless you're presenting
   or are otherwise playing a key role).
 \end{itemize}
 
 
- \section{Lab finances}
+ \section{Lab resources}
  As with most academic research labs, we (sadly!) must conduct our
  research within a limited research budget.  In practice, the
  important thing is to communicate with Jeremy and/or the Lab
@@ -571,7 +682,7 @@ should be reported immediately.
  guidelines will be given on a per-conference or per-trip basis.
 
 If you are not presenting your work, but you are a full-time graduate student,
-postdoctoral reseracher, or lab coordinator, then the lab will cover
+postdoctoral researcher, or lab coordinator, then the lab will cover
 your travel expenses to a limited number of conferences each year.
 These should be discussed with Jeremy.
 
@@ -598,7 +709,7 @@ All costs related to lab publications will be fully covered by the
 lab.  The Lab Coordinator can help facilitate these payments.
 
  \subsection{Subject payments}
- Subject payments for lab reseach projects will be fully covered by
+ Subject payments for lab research projects will be fully covered by
  the lab.  Subject payment guidelines are generally found in the IRB
  approval documentation relevant to your project.  For Mechanical Turk
  experiments, a subject payments budget should be approved prior to
